<resources>
    <string name="app_name">SAHCE_UFCG</string>

    <!-- Buttons -->
    <string name="btn_login">Login</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_schedule">Agendar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_participate">Participar</string>
    <string name="btn_add_image">Adicionar Imagem</string>
    <string name="btn_validate_user_register">Validar</string>

    <!-- Input Fields -->
    <string name="field_name">Nome</string>
    <string name="field_cpf">CPF</string>
    <string name="field_password">Senha</string>
    <string name="field_address">Endereço</string>
    <string name="field_email">E-mail</string>
    <string name="field_phone">Telefone</string>

    <!-- Headers -->
    <string name="header_user_fragment">Usuários</string>
    <string name="header_user_register">Cadastrar Usuário</string>
    <string name="header_place_register">Cadastrar Espaço</string>
    <string name="header_login">Login</string>
    <string name="header_check_times">Consultar Horários</string>
    <string name="header_place_fragment">Espaços</string>
    <string name="header_schedules">Horários</string>
    <string name="header_schedule_register">Cadastrar Horário</string>

    <!-- Links -->
    <string name="link_signup">Registre-se</string>

    <!-- Labels -->
    <string name="label_start_period">Data Inicial</string>
    <string name="label_end_period">Data Final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_places_register">PlacesRegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="place_name_label">Espaço</string>
    <string name="days_and_times_label">Dias e Horários</string>
    <string name="schedule_owner_label">Dono</string>
    <string name="spinner_place_label">Espaço</string>
    <string name="dates_label">Datas do Horário</string>
    <string name="period_label_schedule_card">Período</string>
    <string name="times_first_day_label">Horários do 1º Dia</string>
    <string name="times_second_day_label">Horários do 2º Dia</string>
    <string name="release_date_internal_community">Liberação Para Comunidade Interna</string>
    <string name="release_date_external_community">Liberação Para Comunidade Externa</string>
    <string name="user_name_label">Nome</string>
    <string name="user_phone_label">Telefone</string>
    <string name="user_address_label">Endereço</string>
    <string name="user_email_label">Email</string>
    <string name="user_type_label">Comunidade</string>
    <string name="user_document_label">Documento</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Descrições de Spinners-->
    <string name="description_spinner_place">
        Selector de espaços físicos, usados para a prática de esportes
    </string>
    <string name="description_spinner_day_of_week">
        Selector de dia da semana, usado para cadastrar um horário
    </string>

    <!-- Hints -->
    <string name="initial_date_or_time_input">Inicial</string>
    <string name="final_date_or_time_input">Final</string>

    <!-- Radio Button Texts -->
    <string name="internal_community_radio_btn">Comunidade Interna</string>
    <string name="external_community_radio_btn">Comunidade Externa</string>

    <string-array name="days_of_week">
        <item>SEGUNDA</item>
        <item>TERÇA</item>
        <item>QUARTA</item>
        <item>QUINTA</item>
        <item>SEXTA</item>
        <item>SÁBADO</item>
        <item>DOMINGO</item>
    </string-array>
</resources>