<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background_fields">

        <TextView
        android:id="@+id/times_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_first_day_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_time"
        style="@style/header_2"
        android:backgroundTint="@color/background_fields"/>

        <EditText
            android:id="@+id/start_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/initial_date_or_time_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/times_label"
            app:layout_constraintEnd_toStartOf="@id/end_time"
            android:gravity="center"
            android:focusable="false"
          />

        <EditText
            android:id="@+id/end_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/final_date_or_time_input"
            app:layout_constraintStart_toEndOf="@id/start_time"
            app:layout_constraintTop_toBottomOf="@id/times_label"
            android:gravity="center"
            android:focusable="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>