<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_place_register"
        style="@style/headers_style"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="84dp"
        android:layout_marginBottom="@dimen/default_margin_between_screen_components">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_place_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_name"
            android:inputType="text"
            android:background="@drawable/input_fields_background"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Usuários autorizados"
            />


        <CheckBox
            android:id="@+id/internal_community_checkbox_place_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comunidade Interna"/>
        <CheckBox
            android:id="@+id/external_community_checkbox_place_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comunidade Exerna"/>

    </LinearLayout>

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:backgroundTint="@color/background_buttons"/>
</LinearLayout>