<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ScheduleRegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_nav_height">

        <TextView
            android:id="@+id/header_appointment_times_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_schedule_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/headers_style"
            />

        <TextView
            android:id="@+id/spinner_place_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header_appointment_times_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinner_place"
            android:text="@string/spinner_place_label"
            style="@style/header_2"/>

        <Spinner
            android:id="@+id/spinner_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_spinner_place"
            app:layout_constraintTop_toBottomOf="@id/header_appointment_times_register"
            app:layout_constraintStart_toEndOf="@id/spinner_place_label" />

        <TextView
            android:id="@+id/days_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dias do horario"
            style="@style/header_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_place_label"/>



        <LinearLayout
            android:id="@+id/selected_days_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/days_label"
            app:layout_constraintBottom_toTopOf="@id/spinner_day_of_week"/>

        <Spinner
            android:id="@+id/spinner_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_spinner_day_of_week"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selected_days_layout"
            app:layout_constraintEnd_toStartOf="@id/add_day_of_week_button" />

        <ImageButton
            android:id="@+id/add_day_of_week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            app:tint="@color/white"
            android:backgroundTint="@color/background_buttons"
            app:layout_constraintStart_toEndOf="@id/spinner_day_of_week"
            app:layout_constraintTop_toBottomOf="@id/selected_days_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>